# AVATAR

./: CLAUDE.md
Dynamixel/: Degree_data.csv  (+10 more)
Dynamixel/dynamixel_control/: CMakeLists-jmw-safeBackup-0001.txt  CMakeLists.txt
Dynamixel/dynamixel_control/data/csv/: 00_Sync.csv  01_Default_두리번.csv  02_Default_두리번2.csv  02_Default_두리번두번.csv  03_Default_두리번3.csv  04_호객행위.csv  05_인사.csv  06_춤.csv  0715_1537_Semina_shoulder_HalfMethod_shoulder_estimation_version_Fixed_wrist_shpere_radius.mp4_motor_degree.csv  torquecheck.csv  torquecheck.xlsx
Dynamixel/dynamixel_control/data/csv/.data/: 03_Default_두리번3.csv  04_호객행위.csv  0501_1911_Anysong_1_animation_semina_21degree.mp4_motor_degree.csv  0501_1912_Anysong_2_animation_semina_21degree.mp4_motor_degree.csv  0501_1956_elbow_animation_semina_21degree_Complete.mp4_motor_degree.csv  0501_1957_shoulder1_animation_semina_21degree_Complete.mp4_motor_degree.csv  0501_2006_Anysong_1_animation_semina_21degree_Complete.mp4_motor_degree.csv  0501_2011_Anysong_2_animation_semina_21degree_Complete.mp4_motor_degree.csv  0502_1401_Semina_collar_animation_semina_21degree_Complete.mp4_motor_degree.csv  0502_1411_Semina_wrist_animation_semina_21degree_Complete.mp4_motor_degree.csv  0502_1415_Semina_Robot_joint_animation_semina_21degree_Complete.mp4_motor_degree.csv  0502_1419_gymnast_2_animation_semina_21degree_Complete.mp4_motor_degree.csv  06_shoulder1_Test.csv  06_춤.csv  0708_1251_WMCA_Dance_SPE_select_vector_motor_Scale=Arm.mp4_motor_degree.csv  0715_1630_gymnast_2_HalfMethod_shoulder_estimation_version_Fixed_wrist_shpere_radius_Arm.mp4_motor_degree.csv  08_WMCA_Test3.csv  09_WMCA_BothArm.csv  Desync.csv  H1_0511_2233_gymnast_2_animation_semina_preprocessing.mp4_euler_angle_H1.csv  H1_0512_1507_Anysong_1_animation_semina_preprocessing.mp4_euler_Collar+Shoulder_XYX_angle_H1.csv  H1_0512_1507_Anysong_2_animation_semina_preprocessing.mp4_euler_Collar+Shoulder_XYX_angle_H1.csv  H1_0512_1507_Semina_Robot_joint_animation_semina_preprocessing.mp4_euler_Collar+Shoulder_XYX_angle_H1.csv  H1_0512_1554_gymnast_2_animation_semina_preprocessing.mp4_euler_Collar+Shoulder_XZY_angle_SMPL_Morphing.csv  H1_0512_1620_Semina_Robot_joint_animation_semina_preprocessing.mp4_euler_Collar+Shoulder_angle_H1_XZY.csv  H1_Anysong_1_euler_Rejusted_angle_H1.csv  H1_Anysong_2_euler_Rejusted_angle_H1.csv  H1_Semina_Robot_joint_euler_Rejusted_angle_H1.csv  H1_gymnast_2_euler_Rejusted_angle_H1.csv  torquecheck2.csv
Dynamixel/dynamixel_control/data/csv/poppy/: 0427_2131_13_18_waist_test_motor_degree_comparison_5DoF_bvh_motor_degree.csv  0428_1514_13_18_waist_test_comparison_5DoF_Trial_4_srew_rate_bvh_motor_degree.csv  0428_1514_gymnast_2_waist_test_comparison_5DoF_Trial_4_srew_rate_smpl_motor_degree.csv  0429_2121_13_16_3DoF_pos_bvh_motor_degree.csv  0429_2121_Anysong_2_3DoF_pos_smpl_motor_degree.csv  0429_2121_WMCA_Dance_3DoF_pos_smpl_motor_degree.csv  0516_1608_13_29_sm_4_JH_180_clam_slew_bvh_motor_degree.csv  0517_1822_gymnast_2_sm_4_1600:JH70_120fps_smpl_motor_degree.csv  1104_2222_gymnast_2_poppy_humanoid_motor_degree.csv  1104_2230_Semina_shoulder_poppy_humanoid_motor_degree.csv  1104_2230_WMCA_Dance_poppy_humanoid_motor_degree.csv  3_smoothed_angles_interpolated.csv
Dynamixel/dynamixel_control/data/csv/poppy/.data/: 0407_1546_gymnast_2_waist_and_second_Waist_poppy_motor_degree.csv  0429_2121_13_18_3DoF_pos_bvh_motor_degree.csv  0429_2121_13_29_3DoF_pos_bvh_motor_degree.csv  0516_1608_13_16_sm_4_JH_180_clam_slew_bvh_motor_degree.csv  0516_1752_gymnast_2_sm_4_400:JH70_smpl_motor_degree.csv  1104_2230_Semina_collar_poppy_humanoid_motor_degree.csv  251118_1513_Semina_elbow_poppy_humanoid_Human_point_GN_LM_rviz.csv  Zero.csv
Dynamixel/dynamixel_control/data/csv/poppy/.data/251119_2030_GEO/: 1119_2030_WMCA_Dance_poppy_humanoid_arm_margin_0.95_motor_degree.csv
Dynamixel/dynamixel_control/data/csv/poppy/.data/GN_LM_HumanPoint_flip_Problem/: 1119_2030_WMCA_Dance_Human_Point_GN_LM.csv  1119_2030_gymnast_2_Human_Point_GN_LM.csv
Dynamixel/dynamixel_control/data/csv/poppy/.data/waist_test/2DoF (2P)/: 0409_2042_13_18_one_waist__poppy_motor_degree.csv  0422_1752_gymnast_2_one_waist_poppy_smpl_motor_degree.csv  (+1 more)
Dynamixel/dynamixel_control/data/csv/poppy/1119/: 0119_2135_gymnast_2_poppy_neck_test_main_motor_degree.csv  0120_1021_gymnast_2_poppy_neck_test_edge_degree_0_motor_degree.csv  1119_2030_Semina_Robot_joint_poppy_humanoid_arm_margin_0.95_motor_degree.csv  1119_2030_Semina_collar_poppy__robot_point.csv
Dynamixel/dynamixel_control/data/csv/poppy/fk_output/old/: FK_Anysong_frame_20260516_210035.csv  FK_YMCA_frame_20260516_210307.csv  fk_13_16_20260516_175758.csv  fk_13_18_20260516_175617.csv  fk_YMCA_20260516_170810.csv  fk_anysong_20260516_170650.csv  fk_gymnastic_20260516_175408.csv
Dynamixel/dynamixel_control/install/: local_setup.sh  setup.sh
Dynamixel/dynamixel_control/launch/: poppy_dual_visualization.launch.py  poppy_robot_visualization.launch.py  robot_visualization.launch.xml
Dynamixel/dynamixel_control/log/: latest_build
Dynamixel/dynamixel_control/poppy_description/robots/: Poppy_Humanoid.URDF
Dynamixel/dynamixel_control/scripts/: poppy_fk_recorder.py  poppy_slider_gui.py
Dynamixel/dynamixel_control/src/: csv_joint_state_publisher.cpp  h1_csv_joint_state_publisher.cpp  joint_state_publisher.cpp  poppy_csv_joint_state_publisher.cpp  poppy_read_write_node.cpp  read_write_node.cpp  rviz_visualization_node.cpp  torque_check.cpp  torque_compensation_node.cpp  torque_read_degree_write.cpp
Dynamixel/dynamixel_control/urdf/: AVATAR_URDF_Test3.urdf  poppy_dual_rviz_config.rviz  poppy_rviz_config.rviz
Dynamixel/dynamixel_control/urdf/meshes/: Head.stl  L_Shoulder1.stl  L_Shoulder2.stl  L_Wrist1.stl  R_Shoulder2.stl  R_Shoulder3.stl  Waist_Bottom.stl
robot_client/: CMakeLists.txt  package.xml
robot_client/launch/: robot_client.launch.py
robot_client/src/: birc_move_group_interface_tutorial.cpp  birc_move_group_interface_tutorial_firstnode.cpp  birc_move_group_interface_tutorial_ori.cpp  move_ee.cpp  move_ee_test.cpp  moveit_control.cpp  publisher.cpp  temp.cpp
(+775 files in other folders)
