<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hojae@todo.todo">hojae</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_gripper</depend>
  <!-- <depend>gripper2</depend> -->
  <!-- <depend>geometry_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>kdl_parser</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
